<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drinkLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brick_red"
    tools:context=".activities.DrinkActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/drinkRecyclerView"
        android:layout_width="370dp"
        android:layout_height="match_parent"
        android:layout_below="@id/dropDownMenu"
        android:layout_centerInParent="true" />

    <Spinner
        android:id="@+id/dropDownMenu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/searchView"
        android:layout_marginBottom="1dp"
        android:background="@drawable/rectangle_spinner"
        android:popupBackground="@drawable/rectangle_spinner"
        android:spinnerMode="dropdown"
        android:tooltipText="Filters" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/calistoga"
        android:text="@string/drink_activity_select_your_favourite_drinks"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/goToCartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:clickable="true"
        app:srcCompat="@drawable/shoppingcarticon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/impostazioniPulsanteDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="60dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

</RelativeLayout>

