...
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/immagineDrink"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/nomeDrink"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        app:srcCompat="@drawable/spritz"
        android:contentDescription="@string/image_of_the_drink" />

    <TextView
...
