...
    <string name="login_activity_register_button">Registrati</string>
    <string name="login_activity_register_button_with_fingerprint">With fingerprint</string>
    <string name="login_activity_message_register">Sei nuovo qui? Registrati!</string>
    <string name="register_activity_fingerprint_text">O usa la tua impronta</string>
    <string name="register_activity_fingerprint_button">Impronta</string>
    <string name="order_summary_activity_order_summary">Carrello</string>
    <string name="drink_activity_select_your_favourite_drinks">Seleziona i tuoi drink</string>
    <string name="order_summary_activity_text_view_credit_card_password">Inserisci la password della tua carta di credito</string>
    <string name="registration_not_done_text">Registration not done</string>
    <string name="registration_done_text">Registration done</string>
    <string name="payment_not_made_text">Payment not made</string>
    <string name="payment_made_text">Payment made</string>
    <string name="drimk_view_summary_tip">TOT:</string>
...
